--- a/ROP/python-api/requirements.txt
+++ b/ROP/python-api/requirements.txt
@@ -1,7 +1,10 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-torch==2.0.1
-torchvision==0.15.2
-pillow==10.0.1
+fastapi==0.108.0
+uvicorn[standard]==0.25.0
+torch==2.1.2
+torchvision==0.16.2
+pillow==10.2.0
 python-multipart==0.0.6
-numpy==1.24.3
+numpy==1.26.3
+pydantic==2.5.3
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
